# Virtual-Library-Context

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cuda_shim/: symbols.txt  vlc_callback.c
cudart_shim/: symbols.txt  vlc_callback.c
examples/FANN/: Makefile  run_transparency.sh  symbols.txt  vlc_callback.c  vlc_hashmap.h
examples/FANN/benchmarks/: cascade_train.c  cascade_train_transparent.cpp  parallel.cpp  parallel_vlc.cpp  steepness_train.c  steepness_train_transparent.cpp  xor_train.c  xor_train_transparent.cpp
examples/OpenBLAS/: Makefile  run_transparency.sh  symbols.txt
examples/OpenBLAS/benchmarks/: cholesky.cpp  cholesky_vlc_transparent.cpp  gemm.cpp  gemm_vlc_transparent.cpp  linear_equation.cpp  linear_equation_vlc_transparent.cpp  parallel.cpp.old  parallel_vlc.cpp  (+1 more)
examples/OpenCL/: Makefile
examples/OpenMP/: Makefile  heatmap.csv  run.sh  run_transparency.sh  symbols.txt
examples/Torch/: CMakeLists.txt  compile.sh  example-app.cpp  gpt_config.json  heatmap.csv
examples/Torch/benchmarks/: parallel.cpp
examples/Torch/benchmarks/DNN/: CMakeLists.txt  benchmark.cpp  benchmark.h  main.cpp
examples/Torch/benchmarks/GPTlite/: CMakeLists.txt  gptlite.cpp  gptlite.h  main.cpp
examples/Torch/benchmarks/Transformer/: CMakeLists.txt  transformer.baseline  transformer.cpp
examples/Torch/benchmarks/WideDNN/: CMakeLists.txt  main.cpp
examples/Torch/config/: dnn_config.json  dnn_wide_config.json  gpt_config.json  gpt_dnn_config.json  gpt_wide_config.json  openblas_torch_config.json  openmp_openblas_torch_config.json  openmp_torch_config.json  three_config.json  transformer.json  wide_config.json
examples/Torch/src/initialize_time/: CMakeLists.txt  base.cpp  vlc.cpp
examples/arpack/: Makefile  run_transparency.sh  symbols.txt
examples/galois/: Makefile  run_transparency.sh  symbols.txt
examples/kokkos/: CMakeLists.txt  Makefile  build_kokkos.sh  run
examples/kokkos/benchmarks/: matvec.cpp  matvec_kernel.cpp  matvec_vlc.cpp
examples/kokkos/include/: example_utils.hpp  kokkos_compute.h
examples/kokkos/script/: install_openmpi_with_cuda.sh
examples/kokkos/src/: Makefile  helloworld.hip  kokkos_compute.cpp  launcher.cpp  launcher_novlc.cpp  test_rocm.cpp
examples/kokkos/src/heat3d/: heat3d.cpp  heat3d.h  heat3d_kernel.cpp  heat3d_vlc.cu
examples/kokkos/src/initialize_time/: base.cpp  vlc.cpp
examples/kokkos/src/mpi/: heat3d.cpp
examples/kokkos/src/vlc/: heat3d_launcher.cu  heat3d_vlc.cpp
examples/microbenchmark/: Makefile  overhead.cpp  run_transparency  vlc_service_overhead.cu
examples/oneDNN/: Makefile  run_transparency.sh  symbols.txt  symbols.txt.old  vlc_callback.c
examples/openBLAS/: Makefile  install.sh  run_transparency.sh  symbols.txt
examples/openmp/: Makefile  run_transparency.sh  symbols.txt
include/: VLC.h  VLC_thread.h
include/VLC/: communication.h  info.h  loader.h  resource.h  runtime.h  tuning.h
pthread_shim/: libpthread.so.0  pthread_patch.c  service_callback.c  symbols.txt  vlc_callback.c
scripts/: gen_cuda_shim.sh  gen_cudart_shim.sh  gen_hello_shim.sh  gen_shim.sh  gen_shim_symbols.py  generate_stub_library.sh  process_wikitext_data.py  run_arpack.sh  run_galois.sh  run_kokkos.sh  run_microbenchmark.sh  run_openblas.sh  run_openmp.sh  tuning.py
scripts/diagram/: draw_arpack.py  draw_contention.py  draw_heatmap.py  draw_matmul.py  draw_speedup_hist_2tasks.py  draw_speedup_hist_3tasks.py  draw_synthetic.py  draw_training.py
src/: test_dlmopen.cpp  use_dlmopen.c
test/: test_syscall_intercept.cpp
tests/: test_forge_cpu_file.cpp  test_forge_getaffinity.cpp  test_forge_mem_file.cpp  test_pthread.cpp  test_register_vlc.cpp  test_syscall_intercept.cpp
tests/test_transparency/: Makefile  foobar.cpp  foobar.h  run_test_transparency  test_transparency.cpp  vlc_callback.c
(+148 files in other folders)
